# score-to-music

./: .gitignore  LICENSE  README.md  pyproject.toml
score_to_music/: __init__.py  audio_synthesis.py  cli.py  score2music.py  score_adaptation.py  score_conversion.py
