[tool.poetry]
name = "score-to-music"
version = "0.1.0"
description = "A tool to convert music scores into audio files using custom soundfonts."
authors = ["Nestor Urquiza <nestor.urquiza@gmail.com>"]
readme = "README.md"
packages = [{ include = "score_to_music" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
music21 = "^8.0"
pydub = "^0.25.1"
numpy = "^1.26.0"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
lxml = "^4.9.3"  # For XML processing
requests = "^2.31.0"  # For API integrations

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
score2music = "score_to_music.score2music:cli"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
]
